[gd_scene load_steps=22 format=3 uid="uid://b247iat7n5iat"]

[ext_resource type="Script" path="res://main/objects/bug.gd" id="1_2fasc"]
[ext_resource type="Texture2D" uid="uid://cn35ujayksqs8" path="res://UI/bugbot-drone-v1.png" id="2_4vjet"]
[ext_resource type="Texture2D" uid="uid://b76v012i4uid0" path="res://main/explosion.png" id="2_abiij"]
[ext_resource type="AudioStream" uid="uid://cd0jgxe4v0u7c" path="res://audio/Enemy 1 Death Explosion 01.mp3" id="4_kwkem"]
[ext_resource type="AudioStream" uid="uid://num466ts4od5" path="res://audio/Tower Minigun Shot 01.mp3" id="5_j14re"]
[ext_resource type="AudioStream" uid="uid://5wpqk86s021u" path="res://audio/Enemy 1 Death Explosion 02.mp3" id="5_n11df"]
[ext_resource type="AudioStream" uid="uid://dlk43g6qldrkg" path="res://audio/Tower Railgun Impact 01.mp3" id="6_8yxv0"]
[ext_resource type="AudioStream" uid="uid://clilsw01euisv" path="res://audio/Tower Minigun Shot 02.mp3" id="6_h2knj"]
[ext_resource type="AudioStream" uid="uid://dtgemrjvssgt7" path="res://audio/Enemy 2 Movement (ranged enemy).mp3" id="7_ryivh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_amei8"]
radius = 25.0799

[sub_resource type="Animation" id="Animation_mlyko"]
resource_name = "knockback"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("enemySprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2),
"transitions": PackedFloat32Array(0.5, -2, 1),
"update": 0,
"values": [Vector2(-1.07288e-06, -8.34465e-07), Vector2(0, 10), Vector2(-1.07288e-06, -8.34465e-07)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lodgk"]
_data = {
"knockback": SubResource("Animation_mlyko")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_fkk3v"]
atlas = ExtResource("2_abiij")
region = Rect2(0, 0, 512, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_62dj7"]
atlas = ExtResource("2_abiij")
region = Rect2(512, 0, 512, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkv7x"]
atlas = ExtResource("2_abiij")
region = Rect2(0, 256, 512, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdddk"]
atlas = ExtResource("2_abiij")
region = Rect2(512, 256, 512, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ew41"]
atlas = ExtResource("2_abiij")
region = Rect2(0, 512, 512, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxeho"]
atlas = ExtResource("2_abiij")
region = Rect2(512, 512, 512, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_iflw8"]
atlas = ExtResource("2_abiij")
region = Rect2(0, 768, 512, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3r02"]
atlas = ExtResource("2_abiij")
region = Rect2(512, 768, 512, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_tcokr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkk3v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62dj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkv7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdddk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ew41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxeho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iflw8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3r02")
}],
"loop": false,
"name": &"explosion",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}]

[node name="enemy" type="CharacterBody2D"]
scale = Vector2(2, 2)
collision_layer = 2
script = ExtResource("1_2fasc")
healthMax = 1.0
explodeRange = 300.0

[node name="hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_amei8")

[node name="enemyPivot" type="Node2D" parent="."]

[node name="enemyDirector" type="Node2D" parent="enemyPivot"]
position = Vector2(0, -3)

[node name="knockbackAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lodgk")
}

[node name="enemySprite" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-1.07288e-06, -8.34465e-07)
rotation = 3.14159
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_4vjet")

[node name="projectile" type="Node2D" parent="enemySprite"]
position = Vector2(-26.6669, 59.9999)

[node name="healthbarPivot" type="Node2D" parent="."]

[node name="underHealth" type="ColorRect" parent="healthbarPivot"]
visible = false
offset_left = -24.0
offset_top = -36.0
offset_right = 26.0
offset_bottom = -31.0
color = Color(0.592157, 0, 0, 1)

[node name="overHealth" type="ColorRect" parent="healthbarPivot"]
visible = false
offset_left = -24.0
offset_top = -36.0
offset_right = 26.0
offset_bottom = -31.0
color = Color(1, 0, 0, 1)

[node name="explosionSprite" type="AnimatedSprite2D" parent="healthbarPivot"]
position = Vector2(0, -4)
scale = Vector2(0.15, 0.15)
sprite_frames = SubResource("SpriteFrames_tcokr")
animation = &"idle"

[node name="bulletTimer" type="Timer" parent="."]

[node name="explosionASFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_kwkem")
volume_db = 5.0

[node name="bulletSFX1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_j14re")

[node name="bulletSFX2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_h2knj")

[node name="explosionBSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_n11df")
volume_db = 5.0

[node name="explosionRail" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_8yxv0")

[node name="movementSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_ryivh")
autoplay = true
max_distance = 500.0

[connection signal="animation_finished" from="healthbarPivot/explosionSprite" to="." method="_on_explosion_sprite_animation_finished"]
[connection signal="timeout" from="bulletTimer" to="." method="_on_bullet_timer_timeout"]
